# soapcw

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  HISTORY.md  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: publish-to-pypi.yml  test.yml
containers/: soap-test-python27
docs/: bayesianlineaware.ipynb  conf.py  requirements.txt  transitionmatrix.ipynb  viterbialgorithm.ipynb
docs/usage/: generate_cw_signal.ipynb  generate_lookup_table.ipynb  load_pretrained_CNN.ipynb  load_sft_from_file.ipynb  write_sft_to_file.ipynb
soapcw/: glibc_fix.h
src/cnn/init_files/: default_gauss.ini
src/soapcw/: __init__.py  cli.py  default.ini  soap.pyx  soap_config_parser.py
src/soapcw/cnn/: benchmark_model.py  cnn_data_dag_gen.py  cnn_data_gen.py  generate_gaussian_train_data.py  generate_test_data.py  generate_train_data.py  narrowband_sfts.py  train_model.py
src/soapcw/cnn/keras/models/: sft_model.py  stat_model.py  vitmap_model.py  vitmapsft_model.py  vitmapstat_model.py  vitmapstatsft_model.py
src/soapcw/cnn/pytorch/: __init__.py  load_models.py  models.py
src/soapcw/cw/: generate_data.py  load_sfts.py  make_sfts.py  sft.py  timeseries.py  tools.py
src/soapcw/line_aware_stat/: gen_lookup_python.py  integrals.cpp  integrals.h  save_lookup.py
src/soapcw/neville/: load_models.py  models.py  simulate_data.py  tools.py  train_model.py  truncated_gauss.py
src/soapcw/tools/: narrowband_sfts.py  plots.py  tools.py
src/soapcw_pipeline/: __init__.py  followup_sfts.py  make_dag_files_astro.py  make_dag_files_lines.py  make_html_page.py  run_full_soap_astro.py  run_full_soap_lines.py  soap_config_parser.py
src/soapcw_pipeline/config_files/: test_astro.ini  test_lines.ini
src/soapcw_pipeline/css/: general.css
src/soapcw_pipeline/html/: astropage.html  homepage.html  linepage.html  runpage.html  usage.html
src/soapcw_pipeline/scripts/: table_scripts.js  table_scripts_toplist.js
tests/: SNR_injections.ipynb  test_cwload.py  test_line_aware_stat.py  test_soap.py
